--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
         href="https://fonts.googleapis.com/css?family=Roboto:300,400,700&display=swap"
         rel="stylesheet"
       />
+      <link rel="icon" href="icon.png">
       <title>TIC TAC TOE</title>
     </head>
   </head>
